--- a/src/app/basket/Basket.module.scss
+++ b/src/app/basket/Basket.module.scss
@@ -1,1 +1,10 @@
 @import '../../assets/styles/utils/index.scss';
+
+.title {
+    padding-bottom: 19px;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 29px;
+    text-align: left;
+    padding-top: 90px;
+}
