--- a/src/assets/styles/utils/index.scss
+++ b/src/assets/styles/utils/index.scss
@@ -3,3 +3,12 @@
 .container {
     padding: 0px 166px;
 }
+
+@mixin promo-stiker {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    gap: 5px;
+    padding: 15px 15px;
+    box-shadow: 0px 24px 36px 0px rgba(53, 49, 84, 0.28);
+}
