--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -1,9 +1,74 @@
 @import '../../assets/styles/utils/index.scss';
 
+
 .wrapper {
     display: flex;
     justify-content: center;
     width: 100%;
+    position: relative;
+}
+
+.promo_stiker {
+    display: flex;
+    justify-content: flex-end;
+    position: absolute;
+    z-index: 1;
+    &_1 {
+        top: 0;
+        right: 135px;
+    }
+    &_2 {
+        bottom: 0;
+        right: -42px;
+    }
+}
+
+.sticker__first {
+    @include promo-stiker();
+    position: absolute;
+    top: 82px;
+    right: -87px;
+    width: 149px;
+    height: 204px;
+    background-color: #9e98dc;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    
+    @media screen and (max-width: 425px) {
+        display: none;
+    }
+}
+
+.sticker__second {
+    @include promo-stiker();
+    width: 137px;
+    height: 273px;
+    background-color: #ff8fe6;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+
+
+    @media screen and (max-width: 425px) {
+        display: none;
+    }
+}
+
+.sticker__text {
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #1C2A39;
+    font-weight: 700;
+    font-size: 18px;
+}
+
+.sticker__svg {
+    width: 57px;
+    height: 14px;
 }
 
 .intro {
