--- a/src/components/page/BasketPage/BasketPage.module.scss
+++ b/src/components/page/BasketPage/BasketPage.module.scss
@@ -1,3 +1,7 @@
+.content {
+    padding-bottom: 87px;
+}
+
 .titleRow {
     color: #5C6A79;
     
@@ -8,6 +12,15 @@
 }
 
 .title{
-    text-align: center;
+    width: 25% ;
+    padding-bottom: 30px;
 }
 
+.price {
+    text-align: left;
+}
+
+.checkout {
+    text-align: left;
+    margin-top: 20px;
+}
