--- a/src/components/page/MainPage/Showcase/Showcase.module.scss
+++ b/src/components/page/MainPage/Showcase/Showcase.module.scss
@@ -10,6 +10,8 @@
     grid-template-columns: repeat(2, 1fr);
     grid-column-gap: 75px;
     grid-row-gap: 85px;
+    margin-left: -100px;
+    margin-top: 50px;
 }
 
 .wrapButton {
